--- a/Todoey/Views/Base.lproj/Main.storyboard
+++ b/Todoey/Views/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Todoey-->
+        <!--Items-->
         <scene sceneID="fe7-z7-rl5">
             <objects>
                 <tableViewController id="l3S-yj-Qce" customClass="TodoListViewController" customModule="Todoey" customModuleProvider="target" sceneMemberID="viewController">
@@ -40,7 +40,7 @@
                             <outlet property="delegate" destination="l3S-yj-Qce" id="gGg-gA-IQV"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="sdF-Lo-1gJ">
+                    <navigationItem key="navigationItem" title="Items" id="sdF-Lo-1gJ">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="yqZ-aS-5j6">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -51,7 +51,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mJq-hP-k6j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1764" y="134"/>
+            <point key="canvasLocation" x="2703" y="134"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dTJ-UO-fuZ">
@@ -68,12 +68,55 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="l3S-yj-Qce" kind="relationship" relationship="rootViewController" id="AzL-A0-2ta"/>
+                        <segue destination="cik-vk-mnq" kind="relationship" relationship="rootViewController" id="m1g-Pw-Pf4"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GhH-HM-1we" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1136.8" y="133.5832083958021"/>
+        </scene>
+        <!--Todoey Categories-->
+        <scene sceneID="fGj-i1-4wQ">
+            <objects>
+                <tableViewController id="cik-vk-mnq" customClass="CategoryViewController" customModule="Todoey" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="QWK-ak-m32">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="aOh-ux-UcY">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aOh-ux-UcY" id="VqJ-6I-irS">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="cik-vk-mnq" id="E2v-jx-jjn"/>
+                            <outlet property="delegate" destination="cik-vk-mnq" id="5xr-aw-6s8"/>
+                        </connections>
+                    </tableView>
+                    <toolbarItems>
+                        <barButtonItem title="Item" id="5B0-Ic-m9Q"/>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" title="Todoey Categories" id="4TV-Kf-aPQ">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Qzp-XR-nQ0">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="cik-vk-mnq" id="BH2-h3-UCc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <segue destination="l3S-yj-Qce" kind="show" identifier="goToItems" id="4RD-QG-uNI"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sxc-4P-KIs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1919" y="134"/>
         </scene>
     </scenes>
 </document>
